# uav_ground_station

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  config.yaml
scripts/: start_ground_station.sh  start_mission.sh  start_rviz.sh
src/rviz_navi_multi_goals_pub_plugin/navi_multi_goals_pub_rviz_plugin/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
src/rviz_navi_multi_goals_pub_plugin/navi_multi_goals_pub_rviz_plugin/config/: plugin_config.yaml
src/rviz_navi_multi_goals_pub_plugin/navi_multi_goals_pub_rviz_plugin/src/: multi_navi_goal_panel.cpp  multi_navi_goal_panel.h
src/rviz_waypoint_panel/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
src/rviz_waypoint_panel/config/: uav_navigation.rviz
src/rviz_waypoint_panel/launch/: rviz_ground_station.launch
src/rviz_waypoint_panel/src/: waypoint_panel.cpp  waypoint_panel.h
src/uav_navigator/: CMakeLists.txt  README.md  package.xml
src/uav_navigator/launch/: ground_station.launch
src/uav_navigator/msg/: ExperimentMetrics.msg  NavigatorStatus.msg
src/uav_navigator/src/: experiment_recorder.cpp  logger.cpp  navigator.cpp  safety_monitor.cpp
src/uav_navigator/srv/: NavigatorCommand.srv
src/uav_waypoint_manager/: CMakeLists.txt  README.md  package.xml
src/uav_waypoint_manager/src/: waypoint_manager.cpp
src/uav_waypoint_manager/srv/: LoadWaypoints.srv
