<package format="3">
  <name>navi_multi_goals_pub_rviz_plugin</name>
  <version>2.0.0</version>
  <description>优化版 RViz 多点导航面板插件 — 支持可视化选点、顺序导航、循环导航、与 waypoint_manager 集成</description>
  <maintainer email="groundstation@uav.local">Ground Station Team</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>uav_waypoint_manager</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>uav_waypoint_manager</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
    <rviz plugin="${prefix}/plugin_description.xml"/>
  </export>
</package>
